{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 396,
  "lineage": "72b62708-d081-eba3-b525-01b4b2ef1394",
  "resources": [
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c65e8b52315f51f8",
            "arn": "arn:aws:ec2:ap-southeast-1:872566091374:instance/i-0755ad568e9530f0c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0755ad568e9530f0c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "InstanceXXX",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-04022deacded642f5",
            "private_dns": "ip-172-9-9-85.ap-southeast-1.compute.internal",
            "private_ip": "172.9.9.85",
            "public_dns": "ec2-54-254-183-106.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.254.183.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0017fc4ac444a02a7",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e6f6757846328cb6",
            "tags": {
              "Name": "terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0af05fa6a73cdeacf"
            ]
          },
          "dependencies": [
            "module.instance.aws_security_group.main",
            "module.instance.aws_subnet.main",
            "module.instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:872566091374:internet-gateway/igw-04443d70921b6bd57",
            "id": "igw-04443d70921b6bd57",
            "owner_id": "872566091374",
            "tags": {
              "Name": "terraform"
            },
            "vpc_id": "vpc-0670f984849deac62"
          },
          "dependencies": [
            "module.instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068c1e8a734b337d0",
            "original_route_table_id": "rtb-00fa596dcdced0c96",
            "route_table_id": "rtb-015fde66bce845a37",
            "vpc_id": "vpc-0670f984849deac62"
          },
          "dependencies": [
            "module.instance.aws_internet_gateway.main",
            "module.instance.aws_route_table.main",
            "module.instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-015fde66bce845a37",
            "owner_id": "872566091374",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04443d70921b6bd57",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04443d70921b6bd57",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform"
            },
            "vpc_id": "vpc-0670f984849deac62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance.aws_internet_gateway.main",
            "module.instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f19ce378045b09c9",
            "route_table_id": "rtb-015fde66bce845a37",
            "subnet_id": "subnet-0e6f6757846328cb6"
          },
          "dependencies": [
            "module.instance.aws_internet_gateway.main",
            "module.instance.aws_route_table.main",
            "module.instance.aws_subnet.main",
            "module.instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:872566091374:security-group/sg-0af05fa6a73cdeacf",
            "description": "Internet access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af05fa6a73cdeacf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDP",
                "from_port": 3389,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "VNC",
                "from_port": 5901,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5901
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ping",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "main",
            "name_prefix": "",
            "owner_id": "872566091374",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0670f984849deac62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:872566091374:subnet/subnet-0e6f6757846328cb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.9.0.0/20",
            "id": "subnet-0e6f6757846328cb6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "872566091374",
            "tags": {
              "Name": "terraform"
            },
            "vpc_id": "vpc-0670f984849deac62"
          },
          "dependencies": [
            "module.instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:872566091374:vpc/vpc-0670f984849deac62",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.9.0.0/16",
            "default_network_acl_id": "acl-0a10107505b838435",
            "default_route_table_id": "rtb-00fa596dcdced0c96",
            "default_security_group_id": "sg-08e753262df97d3a7",
            "dhcp_options_id": "dopt-a614e4c0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0670f984849deac62",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00fa596dcdced0c96",
            "owner_id": "872566091374",
            "tags": {
              "Name": "terraform"
            }
          }
        }
      ]
    }
  ]
}